<resources>
    <string name="app_name">Desafio03DigitalHouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_the_marvel_hq_s">Welcome to the Marvel HQ\'s</string>
    <string name="remember">Remember</string>
    <string name="register">Register</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="empty_email">Email não preenchido</string>
    <string name="empty_password">Senha não preenchida</string>
    <string name="empty_name">Nome não preenchido</string>
    <string name="published">Published</string>
    <string name="price">Price:</string>
    <string name="pages">Pages:</string>
    <string name="background_image">Background image</string>
    <string name="image_thumbnail">Image thumbnail</string>
    <string name="image_splash_screen">Image splash screen</string>
    <string name="image_to_return">image to return</string>
    <string name="imagedescription">ImageDescription</string>
    <string name="imageviewdescription">ImageViewDescription</string>
    <string name="buttonbackdescription">ButtonBackDescription</string>
    <string name="imagereturndescription">ImageReturnDescription</string>
    <string name="tolbardescription">TolbarDescription</string>
    <string name="imagecomicdescription">imageComicDescription</string>
</resources>