<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrayBackgroundLogin"
    tools:context=".home.view.register.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/tolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorRedTop"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgReturn"
                    android:layout_width="@dimen/dimen_35"
                    android:layout_height="@dimen/dimen_65"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/imagereturndescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgReturn"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:background="@drawable/title_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:gravity="center"

            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_text_26"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_30"
            app:cardCornerRadius="@dimen/dimen_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_marginLeft="@dimen/dimen_20"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:hint="@string/name"
                    app:hintTextColor="@color/colorRedTop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:id="@+id/txtFieldNameRegisterContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/dimen_6"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:hint="@string/email"
                    app:hintTextColor="@color/colorRedTop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/txtFieldEmailRegisterContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/dimen_6"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:hint="@string/password"
                    app:hintTextColor="@color/colorRedTop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/txtFieldPasswordRegisterContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/containedButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_6"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:background="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:background="@drawable/profile_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_120"
        app:layout_constraintTop_toBottomOf="@id/tolbarRegister"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"/>

    <ImageView
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tolbarRegister"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        android:src="@drawable/profile"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/dimen_120"
        android:contentDescription="@string/tolbardescription" />

</androidx.constraintlayout.widget.ConstraintLayout>