<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorGrayBackgroundLogin"
android:orientation="vertical"
tools:context=".home.view.informationcomic.InfoComicFragment">

<FrameLayout
    android:id="@+id/framelayoutInfoImage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imgBackgroundComic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_222"
        android:layout_marginBottom="@dimen/dimen_60"
        android:contentDescription="@string/background_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_82"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20">

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:contentDescription="@string/image_thumbnail"
            android:padding="@dimen/dimen_4" />

    </LinearLayout>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginStart="@dimen/dimen_10"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:contentDescription="@string/buttonbackdescription" />

</FrameLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/contentBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_20"
    app:layout_constraintBottom_toTopOf="@id/lnBottomtext"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/framelayoutInfoImage">

    <TextView
        android:id="@+id/txtTitleComic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_text_25"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/framelayoutInfoImage"
        tools:text="AMAZING SPIDER-MAN (2014) #1 (mhan variant)"
        tools:ignore="NotSibling" />

    <ScrollView
        android:id="@+id/scrollDescription"
        android:layout_width="374dp"
        android:layout_marginTop="@dimen/dimen_35"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitleComic"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtDescriptionComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_text_17"
            tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lnBottomtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentBottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:text="@string/published"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDatePublishedComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6"
                android:layout_marginLeft="@dimen/dimen_6"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_22"
                android:layout_marginLeft="@dimen/dimen_22"
                android:text="@string/price"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPriceComic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_5"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:text="@string/pages"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtComicCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_5"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_15"
                tools:text="38" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>